--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,15 @@ tmp/
 *.npy
 *.npz
 *.mat
+
+# Frontend specific
+frontend/node_modules/
+frontend/build/
+frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
